# hl-node

./: .gitignore  2025-08-04-alright-read-nodeingestertxt-previous-conversati.txt  CLAUDE.md  DOCKER.md  Dockerfile  docker-compose.yml  node_ingester.txt  override_gossip_config.json
.claude/agents/: lead-engineer-reviewer.md
ingester/: Dockerfile  main.py  requirements.txt
ingester/cli/: activity_monitor.py  folder_listener.py  trade_ingester.py
redis/: generate-config.sh  init-acl.sh  init-redis.sh  redis.conf  redis_password.txt
streaming/: CLAUDE.md  Dockerfile  consumer.py  main.py  pyproject.toml  requirements.txt
streaming/config/: streaming.yaml
streaming/examples/: minimal_consumer.py  simple_consumer.py
streaming/src/streaming/: config.py  main.py  monitoring.py
streaming/src/streaming/core/: file_watcher.py  log_reader.py  redis_client.py
streaming/src/streaming/producers/: base_producer.py  node_fills_producer.py
