[project]
name = "hyperliquid-streaming"
version = "0.1.0"
description = "Ultra-fast log streaming system for Hyperliquid node data"
requires-python = ">=3.11"
dependencies = [
    "redis>=5.0.0",
    "inotify>=0.2.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]